--- a/source/_posts/比特币和区块链的运行原理.md
+++ b/source/_posts/比特币和区块链的运行原理.md
@@ -17,6 +17,7 @@ toc: true
 比特币和区块链技术出现很久了，大家或多或少都有耳闻。不管是对比特币暴涨的羡慕，还是对背后技术的科普。笔者也是一样多少看过一些相关资料，但最近读区块链支付领域的顶会[^1]论文[^2]时还是发现自己对技术细节了解太少，甚至存在一些误解。
 
 本文会介绍一些比特币和区块链的技术细节，同时尽力使其容易理解。
+[TOC]
 
 <!--more-->
 
