modify blog: 比特币和区块链的运行原理

--- a/source/_posts/比特币和区块链的运行原理.md
+++ b/source/_posts/比特币和区块链的运行原理.md
@@ -11,19 +11,89 @@ categories:
     - 专业学习
     - 安全
     - 区块链
-toc: true
 ---
 
-比特币和区块链技术出现很久了，大家或多或少都有耳闻。不管是对比特币暴涨的羡慕，还是对背后技术的科普。笔者也是一样多少看过一些相关资料，但最近读区块链支付领域的顶会[^1]论文[^2]时还是发现自己对技术细节了解太少，甚至存在一些误解。
 
-本文会介绍一些比特币和区块链的技术细节，同时尽力使其容易理解。
-[TOC]
+
+比特币和区块链技术出现很久了，大家或多或少都有耳闻。不管是对比特币暴涨的羡慕，还是对背后技术的科普。笔者也是一样多少看过一些相关资料，但最近读区块链支付领域的顶会<sup><a href="#foot_note_1">[1]</a></sup>论文<sup><a href="#foot_note_2">[2]</a></sup>时还是发现自己对技术细节了解太少，甚至存在一些误解。
+
+本文会介绍一些比特区块链的技术细节，同时尽力使其容易理解。
+
+
 
 <!--more-->
 
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g90w009p7uj30w60jqdi9.jpg)
+## 比特币 bitcoin
 
+所谓的比特币其实是**交易**组成的链。每个**交易**中包含大概信息就是***谁把这个比特币转账给了谁，并且由转出比特币的人签字画押（数字签名<sup><a href="#foot_note_3">[3]</a></sup>）***，具体来说如[图1](#pic_1)，每个交易中包含
 
+* 收到比特币的人的公钥
+* 由**上一个交易**和**收到比特币的人的公钥**组成的数据的哈希
+* **转出比特币的人的数字签名**。
 
-[^1]:SOSP
-[^2]:Lind, J., Naor, O., Eyal, I., Kelbert, F., Sirer, E. G., & Pietzuch, P. (2019, October). Teechain: a secure payment network with asynchronous blockchain access. In *Proceedings of the 27th ACM Symposium on Operating Systems Principles* (pp. 63-79). ACM.
+![](https://tva1.sinaimg.cn/large/006y8mN6gy1g91yo948kjj30lw0crab5.jpg)
+
+<center><span id="pic_1"><sub>图1： 交易链</sub></span></center>
+这样做的话，应该收到比特币的人就可以验证转出比特币的人是不是真的拥有这个比特币。方法就是用**上一个**交易中所有者的公钥去验证**这次**交易中的数字签名，这样就能知道这个比特币上一次被转账给了这次的转出者。
+
+这里有个问题是转出比特币的人可能将同一个比特币转账给多个人，这样上面的交易链就会分叉。然而其实只有最早的那次转账是有效的，后面的转账都是非法的。为了验证交易是不是最早的一次转账，就需要一个**公认的顺序**。传统的方法是由中心节点指定一个顺序，大家被动接受。而比特币是通过多数人同意来认定一个顺序是不是**公认**的，这似乎也更符合**公认**这个词的含义。想要让（比特币系统所有参与者中的）多数人**公认**一个顺序，需要：
+
+* 向所有参与者广播所有的交易
+* 多数参与者同意一个顺序
+
+在每次交易时，交易的接收者需要证明多数节点同意这次交易是最先收到的交易，这样接收者就能安心的完成交易了。
+
+***区块链的主要任务就是达成这样的一个公认的顺序***。
+
+## 区块链 blockchain
+
+区块链的基础是**时间戳服务器**，如[图2](#pic_2)。
+
+### 时间戳服务器
+
+![](https://tva1.sinaimg.cn/large/006y8mN6ly1g926rnfzp5j30om07gq38.jpg)
+
+<center><span id="pic_2"><sub>图2： 时间戳服务器</sub></span></center>
+> 时间戳服务器计算包含多个需要被打时间戳的数据项的区块的哈希值并广泛地发布这个哈希值。时间戳能证明要得到这个哈希值，显然这些数据当时一定是存在的。每个时间戳的哈希值都纳入了上一个时间戳，形成一条链，后面的时间戳进一步增强前一个时间戳。
+>
+> *Bitcoin: A Peer-to-Peer Electronic Cash System<sup><a href="#foot_note_4">[4]</a></sup>*
+
+系统参与者通过在某个时间戳之后计算哈希来表示对某个顺序的认同，这样最长的链就是最多人认同的链，也就是我们想要的公认的顺序。
+
+如果某个恶意参与者想要修改链中某个区块的内容，那必须把这个区块之后的哈希全部重算一遍，并且快速计算使自己这条链成为最长的，在所有人之前将最新哈希广播出去。这看上去是个比较难的任务，但并非不可完成，只要有足够快的计算机就可能做到。**解决方法就是为计算哈希增加难度**。
+
+### 工作量证明 Proof-of-Work
+
+[图3](#pic_3)是区块链中区块的内容：
+
+* 上一个区块的哈希
+* 上面提到的比特币交易
+* 一个随机数（这个随机数是用来调整计算哈希的难度的，也是工作量证明的关键）
+
+![](https://tva1.sinaimg.cn/large/006y8mN6ly1g9281qoyhej30ow06smxl.jpg)
+
+<center><span id="pic_3"><sub>图3： 区块链</sub></span></center>
+
+> 工作量证明采取搜索一个随机数，使得被哈希时，如使用 SHA-256，得到的哈希值以数个 0 比特开始。平均所需工作 量将随所需 0 比特呈指数级增长而验证却只需执行一次哈希。
+>
+> *Bitcoin: A Peer-to-Peer Electronic Cash System<sup><a href="#foot_note_4">[4]</a></sup>*
+
+比特币运行的步骤：
+
+> 1. 向所有节点广播**新交易**
+> 2. 区块链节点将收集的新交易组成一个区块（如[图3](#pic_3)）
+> 3. 计算满足要求（*工作量证明*）的哈希，既得到某个随机数
+> 4. 将这个区块（包含了满足要求的随机数）广播
+> 5. 其他节点确认区块中所有交易都没有被支付过，而且区块确实能够计算出满足要求的哈希
+> 6. 节点通过在这个区块之上继续计算表示对这个区块的接受
+
+这样计算哈希的难度大大增加，恶意节点想要赶上并超过其他所有节点计算哈希的速度，就必须拥有巨量的计算力，而如果拥有这样的计算力，用作正常贡献获得的激励会超过作恶，这样就从动机上消除了作恶。
+
+## 参考文献
+
+<span id="foot_note_1"><sub>[1]: SOSP</sub></span>
+<span id="foot_note_2"><sub>[2]: Lind, J., Naor, O., Eyal, I., Kelbert, F., Sirer, E. G., & Pietzuch, P. (2019, October). Teechain: a secure payment network with asynchronous blockchain access. In *Proceedings of the 27th ACM Symposium on Operating Systems Principles* (pp. 63-79). ACM.</sub></span>
+
+<span id="foot_note_3"><sub>[3]: 可以通过我另一片博客了解：[《用一个例子解释RSA原理》]([https://zhang-tianxu.github.io/chinese/2019/11/15/%E7%94%A8%E4%B8%80%E4%B8%AA%E4%BE%8B%E5%AD%90%E8%A7%A3%E9%87%8ARSA%E5%8E%9F%E7%90%86/](https://zhang-tianxu.github.io/chinese/2019/11/15/用一个例子解释RSA原理/))</sub></span>
+
+<span id="foot_note_4"><sub>[4]: Bitcoin: A Peer-to-Peer Electronic Cash System. Satoshi Nakamoto.https://bitcoin.org/bitcoin.pdf</sub></span>
