--- a/source/_posts/比特币和区块链的运行原理.md
+++ b/source/_posts/比特币和区块链的运行原理.md
@@ -11,6 +11,7 @@ categories:
     - 专业学习
     - 安全
     - 区块链
+top: 1
 ---
 
 
@@ -34,6 +35,7 @@ categories:
 ![](https://tva1.sinaimg.cn/large/006y8mN6gy1g91yo948kjj30lw0crab5.jpg)
 
 <center><span id="pic_1"><sub>图1： 交易链</sub></span></center>
+
 这样做的话，应该收到比特币的人就可以验证转出比特币的人是不是真的拥有这个比特币。方法就是用**上一个**交易中所有者的公钥去验证**这次**交易中的数字签名，这样就能知道这个比特币上一次被转账给了这次的转出者。
 
 这里有个问题是转出比特币的人可能将同一个比特币转账给多个人，这样上面的交易链就会分叉。然而其实只有最早的那次转账是有效的，后面的转账都是非法的。为了验证交易是不是最早的一次转账，就需要一个**公认的顺序**。传统的方法是由中心节点指定一个顺序，大家被动接受。而比特币是通过多数人同意来认定一个顺序是不是**公认**的，这似乎也更符合**公认**这个词的含义。想要让（比特币系统所有参与者中的）多数人**公认**一个顺序，需要：
@@ -54,6 +56,7 @@ categories:
 ![](https://tva1.sinaimg.cn/large/006y8mN6ly1g926rnfzp5j30om07gq38.jpg)
 
 <center><span id="pic_2"><sub>图2： 时间戳服务器</sub></span></center>
+
 > 时间戳服务器计算包含多个需要被打时间戳的数据项的区块的哈希值并广泛地发布这个哈希值。时间戳能证明要得到这个哈希值，显然这些数据当时一定是存在的。每个时间戳的哈希值都纳入了上一个时间戳，形成一条链，后面的时间戳进一步增强前一个时间戳。
 >
 > *Bitcoin: A Peer-to-Peer Electronic Cash System<sup><a href="#foot_note_4">[4]</a></sup>*
