整理文章分类

--- a/source/_posts/常见的系统指令.md
+++ b/source/_posts/常见的系统指令.md
@@ -1,14 +1,10 @@
 ---
 title: 常见的系统指令
 tags:
-  - 操作系统
-  - 系统指令
-  - OS
+  - 汇编语言
 categories:
-  - 学习
-  - 计算机及软件
-  - 操作系统
-  - 硬件知识
+  - 编程语言
+  - 汇编语言
 mathjax: true
 date: 2019-01-25 18:41:20
 ---
