--- a/source/_posts/微信小程序：如何把公众号后台上传的视频链接插入到小程序.md
+++ b/source/_posts/微信小程序：如何把公众号后台上传的视频链接插入到小程序.md
@@ -1,13 +1,9 @@
 ---
 title: 微信小程序：如何把公众号后台上传的视频链接插入到小程序
 tags:
-  - 微信
   - 微信小程序
-  - 小程序
 categories:
-  - 专业学习
-  - 前端
-  - 小程序
+  - web
   - 微信小程序
 date: 2020-04-08 12:09:00
 ---
